通过ssh连接数据库

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <module>aop</module>
         <module>configFileEncr</module>
         <module>dynamicCron</module>
+        <module>mqtt</module>
+        <module>mybatis</module>
         <module>mybatisPlusGenerator</module>
         <module>rabbitmq</module>
         <module>redis</module>
