--- a/mybatis/src/main/resources/application.yml
+++ b/mybatis/src/main/resources/application.yml
@@ -10,12 +10,20 @@ server:
 spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3307/mybatis?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8&autoReconnect=true
+    url: jdbc:mysql://127.0.0.1:3306/mybatis?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8&autoReconnect=true
     username: root
     password: root
     druid:
       test-on-borrow: true
       test-while-idle: true
+  # redis配置
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    password: root
+    database: 0
+    connectTimeout: 5000
+    timeout: 5000
 
 # MyBatis配置
 mybatis:
