--- a/mybatis/pom.xml
+++ b/mybatis/pom.xml
@@ -53,23 +53,23 @@
         </dependency>
 
         <!-- 日志 依赖springBoot -->
-       <!--<dependency>-->
-       <!--     <groupId>org.springframework.boot</groupId>-->
-       <!--     <artifactId>spring-boot-starter-log4j2</artifactId>-->
-       <!-- </dependency>-->
+       <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
         <!-- 日志 不依赖springBoot -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-        </dependency>
+        <!--<dependency>-->
+        <!--    <groupId>org.slf4j</groupId>-->
+        <!--    <artifactId>slf4j-api</artifactId>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--    <groupId>org.slf4j</groupId>-->
+        <!--    <artifactId>slf4j-log4j12</artifactId>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--    <groupId>log4j</groupId>-->
+        <!--    <artifactId>log4j</artifactId>-->
+        <!--</dependency>-->
 
         <!-- 测试 -->
         <dependency>
