--- a/dynamicCron/pom.xml
+++ b/dynamicCron/pom.xml
@@ -31,10 +31,15 @@
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
+            <version>2.3.0</version>
             <exclusions>
                 <exclusion>
-                    <groupId>com.mchange</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+                <exclusion>
                     <artifactId>c3p0</artifactId>
+                    <groupId>c3p0</groupId>
                 </exclusion>
             </exclusions>
         </dependency>
